force-app/main/default/objects/Lead/fields/FNS_ExpressedInterest__c.field-meta.xml
<CustomField>
    <fullName>FNS_ExpressedInterest__c</fullName>
    <label>Expressed Interest (Non FSC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Savings Account</fullName>
            </value>
            <value>
                <fullName>Checking Account</fullName>
            </value>
            <value>
                <fullName>HELOC</fullName>
            </value>
            <value>
                <fullName>Day to Day Banking</fullName>
            </value>
            <value>
                <fullName>Manage Money</fullName>
            </value>
            <value>
                <fullName>Property Purchase</fullName>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Manage Debt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>