force-app/main/default/objects/Lead/fields/FNS_ExternalReferrer__c.field-meta.xml
<CustomField>
    <fullName>FNS_ExternalReferrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Referrer (Non FSC)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>