force-app/main/default/objects/Lead/fields/FNS_InternalReferrer__c.field-meta.xml
<CustomField>
    <fullName>FNS_InternalReferrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Referrer (Non FSC)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>