force-app/main/default/objects/Lead/fields/FNS_PotentialValue__c.field-meta.xml
<CustomField>
    <fullName>FNS_PotentialValue__c</fullName>
    <label>Potential Value (Non FSC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>