force-app/main/default/objects/Lead/fields/FNS_RelatedCustomer__c.field-meta.xml
<CustomField>
    <fullName>FNS_RelatedCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>