force-app/main/default/objects/Lead/recordTypes/FNS_Leads.recordType-meta.xml
<RecordType>
    <fullName>FNS_Leads</fullName>
    <active>true</active>
    <businessProcess>Leads</businessProcess>
    <label>Leads</label>
</RecordType>